--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ SECRET_KEY=your-super-secret-key-here
 FLASK_ENV=production
 DATABASE_URL=sqlite:///finance_tracker.db
 PORT=5001
+
+# In your Config class or environment variables
+DEVELOPMENT_MODE = os.environ.get('DEVELOPMENT_MODE', 'true').lower() == 'true'
