--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 SECRET_KEY=your-super-secret-key-here
 FLASK_ENV=production
-DATABASE_URL=sqlite:///finance_tracker.db
-PORT=5001
+DATABASE_URL=sqlite:////var/www/vance-finance/finance_tracker.db
+PORT=5000
